--- a/src/app/ticket-list/view-ticket/view-ticket.component.html
+++ b/src/app/ticket-list/view-ticket/view-ticket.component.html
@@ -1,25 +1,70 @@
 <mat-card>
-  <mat-form-field [floatLabel]="'always'">
-    <mat-label></mat-label>
-    <input
-      matNativeControl
-      placeholder="Subject"
-      value="{{ currentTicket.title }}"
-    />
-  </mat-form-field>
-  <mat-form-field [floatLabel]="'always'">
-    <textarea matNativeControl value="{{ currentTicket.message }}"></textarea>
-  </mat-form-field>
-  <div>
-    <button mat-raised-button mat-button-base color="primary">Save</button>
-    <button
-      mat-raised-button
-      mat-button-base
-      color="accent"
-      (click)="closeTicketModal()"
-    >
-      Cancel
-    </button>
+  <div class="card-title">
+    <h1>Ticket Info</h1>
+    <i class="fas fa-trash" (click)="onDelete()"></i>
   </div>
+  <form [formGroup]="ticket" (ngSubmit)="onSave()">
+    <mat-form-field [floatLabel]="'always'">
+      <mat-label></mat-label>
+      <input
+        formControlName="title"
+        matNativeControl
+        placeholder="Subject"
+        value="{{ currentTicket.title }}"
+      />
+    </mat-form-field>
+    <mat-form-field [floatLabel]="'always'">
+      <textarea
+        placeholder="Enter ticket information"
+        matNativeControl
+        formControlName="message"
+        value="{{ currentTicket.message }}"
+      ></textarea>
+    </mat-form-field>
+    <mat-select formControlName="tech" placeholder="Select a technician">
+      <mat-option *ngFor="let tech of techs" value="{{ tech._id }}"
+        >{{ tech.firstName }} {{ tech.lastName }}</mat-option
+      >
+    </mat-select>
+    <mat-radio-group class="radio-buttons" formControlName="priority">
+      <mat-radio-button
+        class="normal-radio"
+        value="normal"
+        checked="{{ currentTicket.priority === '3' }}"
+        >Normal</mat-radio-button
+      >
+      <mat-radio-button
+        class="urgent-radio"
+        value="urgent"
+        checked="{{ currentTicket.priority === '2' }}"
+        >Urgent</mat-radio-button
+      >
+      <mat-radio-button
+        class="critical-radio"
+        value="critical"
+        checked="{{ currentTicket.priority === '1' }}"
+        >Critical</mat-radio-button
+      >
+    </mat-radio-group>
+    <mat-form-field>
+      <mat-label>Choose a date</mat-label>
+      <input formControlName="date" matInput [matDatepicker]="picker" />
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <div>
+      <button mat-raised-button mat-button-base type="submit" color="primary">
+        Save
+      </button>
+      <button
+        mat-raised-button
+        mat-button-base
+        color="accent"
+        (click)="closeTicketModal()"
+      >
+        Cancel
+      </button>
+    </div>
+  </form>
 </mat-card>
 <div class="backdrop"></div>
